--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-visibility-sensor": "^5.1.1",
     "web3modal": "^1.9.9"
   }
 }
