--- a/back-end/package.json
+++ b/back-end/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
     "path": "^0.12.7",
+    "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   }
 }
