--- a/trustee-contract/package.json
+++ b/trustee-contract/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
