--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.10.14",
     "@mui/lab": "^5.0.0-alpha.108",
     "@mui/material": "^5.10.14",
+    "@openzeppelin/contracts": "^4.8.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
