--- a/trustee-contract/package.json
+++ b/trustee-contract/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/buidler": "^1.4.8",
     "hardhat": "^2.12.2"
   }
 }
