--- a/trustee-contract/package.json
+++ b/trustee-contract/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/buidler": "^1.4.8",
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
+    "ethereum-waffle": "^3.4.4",
     "hardhat": "^2.12.2"
   }
 }
