--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hex2dec": "^1.1.2",
     "next": "13.0.4",
     "react": "18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-visibility-sensor": "^5.1.1",
     "web3modal": "^1.9.9"
